Fix ussuri gates
This is a combination of 3 commits.
This is the 1st commit message:

Temporarily disable grenade-multinode jobs

We need to backport multiple gate fixes, disable the relevant jobs.
Backports should re-enable the matching jobs

This is the commit message #2:

Add ensure-tox in functional job

neutron functional jobs run tests using the tox env.
Even tempest jobs need tox to be present to run the tempest
tests in venv. But functional job derived from devstack-minimal
jobs does not make sure tox is present or not. devstack jobs does not
mak sure that as those are not only used for tox run but also for
other integration testing.

Current neutorn functional job failure-
- https://zuul.opendev.org/t/openstack/build/59865004855c404ab18f06fc0ec1d005

let's call ensure-tox role in job to make sure tox is present.

Closes-Bug: 1884256
(cherry picked from commit bda80e8e2a94ff3297ec750589cd879896f12c70)

This is the commit message #3:

ovn: Use newer OVS

OVS tag v2.13.0 is not compatible with current used kernel on upstream
Bionic Ubuntu kernel 4.15.0. This patch sticks to commit hash to unblock
the gate. We can either change to newer 2.13 tag once released or better
stop compiling OVS and use one packaged by Ubuntu.

Run functional/fullstack tests with selected OVN and OVS versions

Previously for functional tests OVS version was hardcoded - v2.12.0,
and OVN was installed from OVS repository.

After we merged OVN driver to Neutron tree we run both
Neutron/OVS and Neutron/OVN functional tests in one job.

This patch adds possibility to specify from which tag/branch OVS and OVN
should be checkout.

Closes-Bug: #1883601
Closes-Bug: #1878160
(cherry picked from commit d0860588957730b97fe3ebbefa77c6421da45adc)

Change-Id: I8c59e209f3a4573c3f94da6c2acd7d6f57e30b31

--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -18,8 +18,10 @@
         - neutron-fullstack
         - neutron-fullstack-with-uwsgi
         - neutron-rally-task
-        - neutron-grenade-multinode
-        - neutron-grenade-dvr-multinode
+        # TODO(bcafarel): temporarily disable these jobs so we can get multiple
+        # gate fixes properly backported
+        #- neutron-grenade-multinode
+        #- neutron-grenade-dvr-multinode
         - neutron-tempest-linuxbridge
         - neutron-tempest-with-uwsgi
         - tempest-integrated-networking:
@@ -94,8 +96,10 @@
         - tempest-integrated-networking
         - neutron-tempest-linuxbridge
         - neutron-tempest-iptables_hybrid
-        - neutron-grenade-multinode
-        - neutron-grenade-dvr-multinode
+        # TODO(bcafarel): temporarily disable these jobs so we can get multiple
+        # gate fixes properly backported
+        #- neutron-grenade-multinode
+        #- neutron-grenade-dvr-multinode
         - tempest-slow-py3:
             irrelevant-files: *irrelevant-files
         - tempest-ipv6-only:
